feat: complete landing/home page (#2)
* feat: add navbar of the header

* feat : mvp for home page

* fix : fix the lint error or irregular whitespace

* feat : card packages

* feat : initial tablet project

* fix : unlock the children

* feat : update the swiper for badge

* feat : swiper

* feat : update the mobile menu

* fix : mobile menu

* fix : mobile menu

* fix : lint error

* fix : update the responsive

* refactor: update codebase

* feat : autocomplete the search input

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bage_type_slider .swiper {
+  width: 100%;
+  height: 100%;
+}
+.bage_type_slider .swiper-wrapper {
+  padding-bottom: 50px;
+}
+
+.bage_type_slider .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
+.bage_type_slider .swiper-pagination {
+  bottom: -5px !important;
+}
+
+.bage_type_slider .swiper-pagination-bullet {
+  background: #cafc01;
+}
+
+.bage_type_slider .swiper-pagination-bullet-active {
+  background: #cafc01;
+  width: 10px;
+  height: 10px;
+}
+
+.card_effect_swiper .swiper-slide-visible {
+  padding: 10px;
+}
+.card_effect_swiper .swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overflow_effect_swiper .swiper-slide {
+  width: 300px;
+  @media (max-width: 768px) {
+    width: 250px;
+  }
+}
+
+.badge_effect_swiper .swiper-wrapper {
+  right: -23%;
+  @media (max-width: 1024px) {
+    right: -33%;
+  }
+  @media (max-width: 768px) {
+    right: -30%;
+  }
+  @media (max-width: 520px) {
+    right: -22%;
+  }
+  @media (max-width: 430px) {
+    right: -17%;
+  }
+}
+
+.MuiAutocomplete-paper {
+  margin-top: 10px;
+  border-radius: 20px;
+}
