create : making new PR for feedback (#16)
* feat : complete the my domain page

* feat : ongoing - badges & my domains page

* feat : ongoing - cart page

* fix : display verify section

* fix : feedback

* chore: update confirm position

* fix : feedback

* fix : phone image

* feat : domain register page & fix cart page

* fix : key

* fix : cart & register domain banner

* fix : feedback for footer and header font, favorite tab

* fix : affilite page

* fix : hambuger menu

* fix : Using local storage for cart

* fix : feedback without affiliate

* fix : update the checkout

* fix : 1st update for feedback

* fix : header & affiliate

* fix : placeholder

* fix : sliderToClicked

* fix : favorite tag

* fix : fixing 2th feedback

* fix : register router

* fix : 3th feedback

* fix : remove the security form input

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,3 +78,27 @@
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
+
+#nprogress {
+  pointer-events: "none";
+  z-index: 100;
+}
+#nprogress .bar {
+  top: 0;
+  left: 0;
+  height: 5px;
+  width: 100%;
+  position: fixed;
+  background: #cafc01;
+  box-shadow: "0 0 2px #cafc01";
+}
+#nprogress .peg {
+  right: 0;
+  opacity: 1;
+  width: 100px;
+  height: 100%;
+  display: block;
+  position: absolute;
+  transform: "rotate(3deg) translate(0px, -4px)";
+  box-shadow: "0 0 10px #cafc01, 0 0 5px #cafc01";
+}
