--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,14 @@
   height: 10px;
 }
 
+.bage_type_slider .swiper-button-next {
+  color: #cafc01;
+}
+
+.bage_type_slider .swiper-button-prev {
+  color: #cafc01;
+}
+
 .card_effect_swiper .swiper-slide-visible {
   padding: 10px;
 }
@@ -101,4 +109,244 @@
   position: absolute;
   transform: "rotate(3deg) translate(0px, -4px)";
   box-shadow: "0 0 10px #cafc01, 0 0 5px #cafc01";
+}
+
+body {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #cafc01;
+  border-radius: 100px;
+}
+
+.loading-icon {
+  color: black;
+  font-size: 2rem;
+  animation: animate 2s infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(720deg);
+  }
+}
+
+#carousel {
+  height: 450px;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#carousel1 {
+  height: 400px;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.arrow {
+  position: absolute;
+  text-align: center;
+  font-size: 25px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 20px;
+  color: #cafc01;
+  line-height: 30px;
+  margin-top: 85px;
+  z-index: 100;
+}
+
+.arrow-right {
+  right: 40%;
+  bottom: -40px;
+}
+.arrow-left {
+  left: 40%;
+  bottom: -40px;
+}
+.arrow:hover {
+  color: #ffeb3b;
+}
+
+.item {
+  width: 300px;
+  border: 1px solid yellow;
+  text-align: center;
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition:
+    box-shadow 1s,
+    height 250ms,
+    width 250ms,
+    left 1s,
+    margin-top 1s,
+    line-height 250ms,
+    background-color 1s;
+}
+
+.level-1 {
+  box-shadow: -0.2em 0.2em 0.4em #212121;
+  height: 90%;
+  width: 100%;
+  line-height: 78%;
+  left: 30%;
+}
+
+.level0 {
+  box-shadow: 0 0.4em 0.8em #212121;
+  width: 100%;
+  line-height: 85%;
+  left: 50%;
+}
+
+.level1 {
+  box-shadow: 0.2em 0.2em 0.4em #212121;
+  height: 90%;
+  width: 100%;
+  line-height: 78%;
+  left: 70%;
+}
+
+.level-1,
+.level1 {
+  z-index: 1;
+}
+
+.level0 {
+  z-index: 2;
+}
+
+.left-enter {
+  opacity: 0;
+  left: 85%;
+  height: -8%;
+  width: -8%;
+  line-height: 42%;
+}
+.left-enter.left-enter-active {
+  opacity: 1;
+  left: 85%;
+  height: 72%;
+  width: 17%;
+  line-height: 72%;
+  transition:
+    box-shadow 1s,
+    left 1s,
+    opacity 1s,
+    height 250ms,
+    width 250ms,
+    margin-top 1s,
+    line-height 1s;
+}
+
+.left-leave {
+  opacity: 1;
+  left: 15%;
+  height: 72%;
+  width: 17%;
+  line-height: 72%;
+  z-index: -1;
+}
+.left-leave.left-leave-active {
+  z-index: -1;
+  left: 15%;
+  opacity: 0;
+  height: -8%;
+  width: -8%;
+  line-height: 120px;
+  transition:
+    box-shadow 1s,
+    left 1s,
+    opacity 1s,
+    height 250ms,
+    width 250ms,
+    margin-top 1s,
+    line-height 1s;
+}
+
+.right-enter {
+  opacity: 0;
+  left: 15%;
+  height: -8%;
+  width: -8%;
+  line-height: 42%;
+}
+.right-enter.right-enter-active {
+  left: 15%;
+  opacity: 1;
+  height: 72%;
+  line-height: 72%;
+  width: 17%;
+  transition:
+    box-shadow 1s,
+    left 1s,
+    opacity 1s,
+    height 250ms,
+    width 250ms,
+    margin-top 1s,
+    line-height 1s;
+}
+
+.right-leave {
+  left: 85%;
+  height: 72%;
+  opacity: 1;
+  line-height: 72%;
+  width: 17%;
+}
+.right-leave.right-leave-active {
+  left: 85%;
+  opacity: 0;
+  height: -8%;
+  width: -8%;
+  line-height: 42%;
+  transition:
+    box-shadow 1s,
+    left 1s,
+    opacity 1s,
+    height 250ms,
+    width 250ms,
+    margin-top 1s,
+    line-height 1s;
+}
+
+@media only screen and (max-width: 768px) {
+  .level0 {
+    width: 280px;
+    height: 90%;
+  }
+  .level-1 {
+    width: 50%;
+    height: 80%;
+  }
+  .level1 {
+    width: 50%;
+    height: 80%;
+  }
 }
